eks/ai-sales-api-servce.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-sales-api-service
spec:
  selector:
    app: ai-sales-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
