eks/ai-sales-web-servce.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-sales-web-service
spec:
  selector:
    app: ai-sales-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
